changed from card to card_front

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     flex-wrap: wrap;
   }
   
-  .card {
+  /* .card {
     margin: 1rem;
     border: 1px solid gray;
   }
@@ -23,4 +23,4 @@
     .card {
       flex: 1 1 calc(33% - 2rem);
     }
-  }
+  } */
