--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
     max-width: 1200px;
     margin: 0 auto;
   }
@@ -6,7 +6,7 @@
   .container {
     display: flex;
     flex-wrap: wrap;
-  }
+  } */
   
   /* .card {
     margin: 1rem;
@@ -24,3 +24,40 @@
       flex: 1 1 calc(33% - 2rem);
     }
   } */
+
+body {
+    background: white;
+}
+
+
+#root {
+    position: absolute;
+    width: 250px;
+    height: 320px;
+    background: none;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.container {
+    position: relative;
+    width: 100%;
+    height: 150%;
+    transform-style: preserve-3d;
+    transition: all 0.8s ease;
+}
+
+.card_face_front{
+    position:sticky;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: #ffc728;   
+    color: #000;
+    text-align: center;     
+}
+
+
+
+
