--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .card_face_front{
-    position:sticky;
+    position:relative;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
@@ -58,6 +58,15 @@ body {
     text-align: center;     
 }
 
-
+.drink_img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    background: purple;
+    color: white;
+    text-align: center;
+    transform: rotateY(180deg);
+}
 
 
