--- a/style.css
+++ b/style.css
@@ -23,63 +23,55 @@
     .card {
       flex: 1 1 calc(33% - 2rem);
     }
-  } */
-
-body {
-    background: white;
-    font-family: sans-serif;
-    
-}
+  } */ */
 
 
-#root {
-    position: absolute;
-    
-    width: 250px;
-    height: 320px;
-    background: none;
-    top: 30%;
-    left: 50%;
-    transform: translate(-300%, -50%);
-    
-}
+
+
+body { font-family: sans-serif; }
 
 .container {
-    position: relative;
-    width: 100%;
-    height: 150%;
-    transform-style: preserve-3d;
-    transform-origin: center right;
-    transition: transform 1s;
+  display: inline-block;
+  width: 200px;
+  height: 260px;
+/*   border: 1px solid #CCC; */
+  margin: 40px 0;
+  perspective: 600px;
 }
 
-.drink_img{
-    position: relative;
-    
-    padding: 10px;
-    width: 150%;
-    height: 100%;
-    backface-visibility: hidden;
-      
-    color: #000;
-        
-     
+.card {
+  position: relative;
+  width: 350px;
+  height: 350px;
+  cursor: pointer;
+  transform-style: preserve-3d;
+  transform-origin: center right;
+  transition: transform 1s;
 }
 
-.card_back{
-    
-    position: relative;
-   
-    width: 150%;
-    height: 100%;
-    backface-visibility: hidden;
-    background: purple;
-    color: white;
-    text-align: center;
-    transform: rotateY(180deg);
+.card.is-flipped {
+  transform: translateX(-100%) rotateY(-180deg);
 }
 
-.flipCard {
-    transform: rotateY(180deg);
+.card__face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  
+  color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size: 20px;
+  backface-visibility: hidden;
 }
+
+/* .card__face--front {
+ background: crimson;
+} */
+
+.card__face--back {
+  background: slateblue;
+  transform: rotateY(180deg);
+}
+
 
