--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 
 .container {
     
+    padding-left: 125px;   
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
@@ -19,9 +20,9 @@ body {
 }
 
 .card {
-     
+   
   position: relative;
-  width: 350px;
+  width: 400px;
   height: 350px;
   cursor: pointer;
   transform-style: preserve-3d;
@@ -41,7 +42,7 @@ body {
   color: white;
   text-align: center;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 17px;
   bottom: 20px;
   backface-visibility: hidden;
 }
@@ -52,9 +53,14 @@ body {
 }
 
 .card__face--back {
-
+    
   background: gray;
   transform: rotateY(180deg);
+}
+
+.ingredients {
+    font-size: 14px;
+    list-style-type: none;
 }
 
 
