--- a/style.css
+++ b/style.css
@@ -5,12 +5,10 @@ body {
 }
 
 .container {
-    
     padding-left: 125px;   
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
-    
     
   width: 200px;
   height: 260px;
@@ -20,6 +18,8 @@ body {
 }
 
 .card {
+
+   
    
   position: relative;
   width: 400px;
@@ -35,6 +35,7 @@ body {
 }
 
 .card__face {
+    
   position: absolute;
   width: 100%;
   height: 100%;
@@ -48,6 +49,7 @@ body {
 }
 
 .card__face--front {
+    
     position:absolute;
     
 }
@@ -66,4 +68,9 @@ body {
 
 
 /* transform: rotate(-90deg); */
+
+.text {
+    position: absolute;
+    text-align: left;
+}
 
